# subjective_gmail_datasource

./: .gitignore  README.md  SubjectiveGmailDataSource.py  description-en.json  gmail_receive.py  pyproject.toml  requirements.txt
