[project]
name = "subjective_gmail_datasource"
version = "0.1.0"
description = "Subjective data source plugin: Gmail."
requires-python = ">=3.12"
dependencies = [
  "subjective-abstract-data-source-package @ git+https://github.com/PabloBorda/subjective-abstract-data-source-package.git",
  "brainboost-data-source-logger-package @ git+https://github.com/PabloBorda/brainboost_data_source_logger_package.git",
  "brainboost-configuration-package @ git+https://github.com/PabloBorda/brainboost_configuration_package.git",
  "google-auth>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
  "google-auth-httplib2>=0.1.0",
  "google-api-python-client>=2.0.0",
  "alive-progress>=3.1.0",
  "cryptography>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

